# Noob_CV_Lib

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  clean.sh  example.sh
.devcontainer/: Dockerfile  devcontainer.json
examples/: grayscale_conversion.cpp
images/: shroom2
include/core/: MedianFilter.h  constants.h  freq_filters.h  image_processing.h  image_processing_ii.h  lucas_kanade.h  preprocessing.h  simple_filters.h
include/utils/: core_utils.h  image_utils.h
src/: CMakeLists.txt
src/core/: MedianFilter.cpp  freq_filters.cpp  image_processing.cpp  image_processing_ii.cpp  lucas_kanade.cpp  preprocessing.cpp  simple_filters.cpp
src/examples/: example.cpp
src/utils/: core_utils.cpp  image_utils.cpp
